Working basic notifications for facilitator goal ratings, better handling for game crash/quitting.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -100,24 +100,24 @@
                                 </button>
 
                             </div>
+
+                            <div id="logo-header">
+                                {{{cloudinaryUrl "v1490382407/at-stake/layout/logo.svg" }}} 
+                            </div>
                           
                             <div id="message-disconnected" class="col-sm-8 col-centered error menu" style="display:none">
                               It looks like the game is not responding for some reason. Try reconnecting or playing later!
                             </div>
 
-                            <div id="logo-header">
-                                {{{cloudinaryUrl "v1490382407/at-stake/layout/logo.svg" }}} 
-                            </div>
-
                             <button id="btn-reconnect" class="btn" type="submit" name="submit" data-keep_open="true" data-keep_enabled="true">
-                                Reconnect
+                                Quit
                             </button>
-                            <div class="btn_cap">Press this button if you are experiencing technical problems or are prompted to refresh.</div>
+                            {{!-- <div class="btn_cap">Press this button if you are experiencing technical problems or are prompted to refresh.</div> --}}
 
-                            <button id="btn-quit" class="post-button submit btn" type="submit" name="submit" data-keep_open="true" data-keep_enabled="true">
+                            {{!-- <button id="btn-quit" class="post-button submit btn" type="submit" name="submit" data-keep_open="true" data-keep_enabled="true">
                                 Quit game
-                            </button>
-                            <div class="btn_cap pink"><strong>Warning:</strong> this will end the current game for everyone! You will be taken back to game login.</div>
+                            </button> --}}
+                            {{!-- <div class="btn_cap pink"><strong>Warning:</strong> this will end the current game for everyone! You will be taken back to game login.</div> --}}
                             
                         </section>
 
