Login UI fixes, game resume fix.

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -197,16 +197,15 @@
 
 		img {
 			// height: 136px;
-			width: 198px;
+			width: 280px;
 			padding: 10px;
 		}
 
 		p {
 			color: $cerulean-blue;
-			width: 226px;
-			margin: 0px auto;
 			font-size: 18px;
-			font-family: $header-type;
+			font-family: $roboto;
+			letter-spacing: 0.7px;
 		}
 
 	}
@@ -410,11 +409,8 @@
 			color: lighten($background-color, 15%)
 		}
 
-		h3 {
-			font-weight: 700;
-			color: white;
-			margin: 0px;
-			font-family: AvenirNext-Bold;
+		h2 {
+			font-family: $header-type;
 		}
 
 		#decks {
@@ -423,6 +419,7 @@
 			@include box-shadow(0, 0, 8px, rgba(0, 0, 0, 0.25));
 
 			.deck {
+					outline: 0;
 					
 					&.ui-state-active {
 						.header img {
@@ -511,6 +508,7 @@
 
 				.player {
 					padding: 5%;
+					margin: -1px;
 				}
 			}
 
