--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -2,7 +2,7 @@
 
   <div id="login-header">
     <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540484156/at-stake/layout/logo.svg" />
-    <p>Deliberate, Negotiate, Decide</p>
+    <p>Deliberate &nbsp;&nbsp;&nbsp; Negotiate &nbsp;&nbsp;&nbsp; Decide</p>
   </div>
 
   {{!-- NAME ENTRY --}}
@@ -54,7 +54,7 @@
   <div class="lobby" id="decider" style="display:none">
     <div class="form create col-sm-12 col-lg-12 col-centered" id="deck-choice">
 
-      <h3 class="white">Select a Deck</h3>
+      <h2>Select a Deck</h2>
       
       <section id="decks">
       </section>
@@ -81,7 +81,7 @@
       </div>
 
       <div class="form" id="start">
-        <div id="btn-start-game" class="btn btn-default submit" data-event="game:start{{!--game:intro--}}">
+        <div id="btn-start-game" class="btn btn-default submit" data-event="game:intro">
           <h2>Start</h2>
         </div>
       </div>
