--- a/templates/partials/shared/teaminfo.hbs
+++ b/templates/partials/shared/teaminfo.hbs
@@ -34,7 +34,7 @@
                                 {{#unless goatMet}}
                                 data-event="player:met_goal" data-package='{"uid":"{{uid}}"}'
                                 {{else}}
-                                checked="checked"
+                                checked="checked" disabled="disabled"
                                 {{/unless}}
                             >
                             <span class="slider round">
