--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -18,7 +18,7 @@
 	{{/ifeq}}
 
 	{{!-- PROBLEM --}}
-	<div class="screen form">
+	<div class="screen bg form">
 
 		{{> component/instructions 
 				decider=true
@@ -67,7 +67,7 @@
 	</div>
 
 	{{!-- QUESTION (NON-FACILITATOR) --}}
-	<div class="screen">
+	<div class="screen bg">
 
 		{{> component/instructions 
 				decider=true
