--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -210,7 +210,7 @@ var screenOpen = function(screenElement) {
 		animationDone.resolve();	
 	}});
 	speechTimeline.fromTo(screenElement.children('blockquote'), 1.1,  hidden, shown);
-	speechTimeline.fromTo(screenElement.find('section.instruction'), .7,  {yPercent:100, opacity:0}, {yPercent:0, opacity:1, ease:Expo.easeOut});
+	speechTimeline.fromTo(screenElement.find('section.instruction'), .7,  {yPercent:-100, opacity:0}, {yPercent:0, opacity:1, ease:Back.easeOut});
 
 	if(!_.isEmpty(screenElement.data())) {
 	
