Transition away from el-web-sdk to standalone process via Lab bootstrapper.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -36,7 +36,7 @@
         <meta property="og:image" content="http://res.cloudinary.com/engagement-lab-home/image/upload/v1494604113/at-stake/layout/logo_3x.png" />
 
         {{!-- Load web SDK's core script/docs --}}
-        {{> core environment=env}}
+        {{!-- {{> core environment=env}} --}}
 
         {{!-- Load our CSS/docs --}}
         {{> css environment=env section=section}}
