--- a/templates/partials/script/development.hbs
+++ b/templates/partials/script/development.hbs
@@ -13,9 +13,9 @@
 {{!-- SCRIPTS START --}}
 {{!-- Jquery and Bootstap core js files --}}
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script type="text/javascript" src="/js/jquery/jquery.plugin.js"></script>
-<script type="text/javascript" src="/plugins/jquery-ui.min.js"></script>
-<script type="text/javascript" src="/plugins/jquery.browser.js"></script>
+<script type="text/javascript" src="https://res.cloudinary.com/engagement-lab-home/raw/upload/at-stake/js/jquery.inheritance.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-browser/0.1.0/jquery.browser.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 {{!-- Underscore --}}
@@ -30,13 +30,10 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
 
 {{!-- Socket.io --}}
-<script type="text/javascript" src="/at-stake-socket/socket.io.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 
 {{!-- Sound --}}
 <script type="text/javascript" src="/bower_components/ion-sound/js/ion.sound.js"></script>
-
-{{!-- Glide javascript --}}
-{{!-- <script type="text/javascript" src="/bower_components/glidejs/dist/glide.js"></script> --}}
 
 {{!-- GSAP Timeline --}}
 <script type="text/javascript" src="/plugins/gsap-timeline-slider.js"></script>
