--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -639,7 +639,7 @@
 			playerUID = sessionStorage.getItem('uUID');
 		
 		// Open socket connection
-		socket = io('//{{host}}', {path: '/at-stake-socket', 'reconnection': true,'reconnectionDelay': 500,'maxReconnectionAttempts':Infinity});
+		socket = io('//{{host}}', {path: '/at-stake-socket/', 'reconnection': true,'reconnectionDelay': 500,'maxReconnectionAttempts':Infinity});
 		registerEvents();
 
 	}
